--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ backcall==0.1.0
 black==18.9b0
 bleach==3.1.0
 Click==7.0
+cloudpickle==0.8.0
 cycler==0.10.0
+dask==1.1.3
 decorator==4.3.2
 defusedxml==0.5.0
 entrypoints==0.3
@@ -25,6 +27,7 @@ jupyterlab==0.35.4
 jupyterlab-server==0.2.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
+llvmlite==0.27.1
 MarkupSafe==1.1.0
 matplotlib==3.0.2
 mccabe==0.6.1
@@ -33,13 +36,17 @@ mpmath==1.1.0
 nb-pdf-template==2.0.3
 nbconvert==5.4.0
 nbformat==4.4.0
+nbstripout==0.3.3
+networkx==2.2
 notebook==5.7.4
+numba==0.42.1
 numpy==1.16.0
 pandas==0.24.0
 pandocfilters==1.4.2
 parso==0.3.2
 pexpect==4.6.0
 pickleshare==0.7.5
+Pillow==5.4.1
 prometheus-client==0.5.0
 prompt-toolkit==2.0.7
 ptyprocess==0.6.0
@@ -49,8 +56,10 @@ pylint==2.2.2
 pyparsing==2.3.1
 python-dateutil==2.7.5
 pytz==2018.9
+PyWavelets==1.0.2
 pyzmq==17.1.2
 qtconsole==4.4.3
+scikit-image==0.14.2
 scipy==1.2.0
 seaborn==0.9.0
 Send2Trash==1.5.0
@@ -60,6 +69,7 @@ sympy==1.3
 terminado==0.8.1
 testpath==0.4.2
 toml==0.10.0
+toolz==0.9.0
 tornado==5.1.1
 traitlets==4.3.2
 typed-ast==1.2.0
