--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appdirs==1.4.3
-astroid==2.2.3
+astroid==2.2.5
 attrs==19.1.0
 backcall==0.1.0
 black==18.9b0
@@ -7,15 +7,16 @@ bleach==3.1.0
 Click==7.0
 cloudpickle==0.8.0
 cycler==0.10.0
-dask==1.1.3
+dask==1.1.4
 decorator==4.3.2
 defusedxml==0.5.0
 entrypoints==0.3
+imageio==2.5.0
 ipykernel==5.1.0
 ipython==7.3.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
-isort==4.3.10
+isort==4.3.14
 jedi==0.13.3
 Jinja2==2.10
 jsonschema==3.0.1
@@ -38,7 +39,7 @@ nbconvert==5.4.1
 nbformat==4.4.0
 nbstripout==0.3.3
 networkx==2.2
-notebook==5.7.4
+notebook==5.7.6
 numba==0.42.1
 numpy==1.16.2
 pandas==0.24.1
@@ -58,7 +59,7 @@ pyrsistent==0.14.11
 python-dateutil==2.8.0
 pytz==2018.9
 PyWavelets==1.0.2
-pyzmq==18.0.0
+pyzmq==18.0.1
 qtconsole==4.4.3
 scikit-image==0.14.2
 scipy==1.2.1
@@ -73,7 +74,7 @@ toml==0.10.0
 toolz==0.9.0
 tornado==6.0.1
 traitlets==4.3.2
-typed-ast==1.2.0
+typed-ast==1.3.1
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
